adelanto de planmtilla de naturalhearted

--- a/nosotros.html
+++ b/nosotros.html
@@ -137,7 +137,7 @@
                     <div class="timeline-year">2015</div>
                     <div class="timeline-content">
                         <h3>Los inicios</h3>
-                        <p>Fernanda, recién graduada como veterinaria, identifica la falta de opciones verdaderamente naturales en el mercado de alimentos para mascotas.</p>
+                        <p>Fernanda, identifica la falta de opciones verdaderamente naturales en el mercado de alimentos para mascotas.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
